Fix kanban description overflowing column when opening

--- a/app/assets/stylesheets/application/application.scss
+++ b/app/assets/stylesheets/application/application.scss
@@ -2399,6 +2399,7 @@ form.indicator-value input[type=radio] {
 	min-height: 200px;
 	padding-bottom: 8em;
 	margin: 0;
+	overflow: hidden;
 }
 
 .cs-size-kb-lane {
